Update start-et-tomcat.sh